Add user microposts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,7 @@
 
 /* variables, mixins, etc. */
 $grayMediumLight: #eaeaea;
+$grayLight: #999;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -164,3 +165,24 @@ input {
   }
 
 }
+
+/* microposts */
+.microposts
+{
+  list_style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.content {
+  display: block;
+}
+
+.timestamp {
+  color: $grayLight;
+}
+
